@@ -50,9 +50,18 @@ NEW FEATURES
         http://stackoverflow.com/questions/8991709/why-are-pandas-merges-in-python-faster-than-data-table-merges-in-r
         
     o   rbind.data.table() gains a use.names argument, by default TRUE.
-        Set to FALSE to combine columns in order rather than by name.
+        Set to FALSE to combine columns in order rather than by name. Thanks to
+        a question by Zach on Stack Overflow :
+        http://stackoverflow.com/questions/9315258/aggregating-sub-totals-and-grand-totals-with-data-table
         
-    
+    o   New argument 'keyby'. An ad hoc by just as 'by' but with an additional setkey()
+        on the by columns of the result, for convenience. Not to be confused with a
+        'keyed by' such as DT[...,by=key(DT)] which can be more efficient as explained
+        by FAQ 3.3.  Thanks to Yike Lu for the suggestion and discussion (FR#1780).
+        
+    o   Single by (or keyby) expressions no longer need to be wrapped in list(),
+        for convenience; e.g.,
+            DT[,sum(v),by=a%%2L]
 
 
 BUG FIXES
